...
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="Integration Name" />

        <com.ambassador.app.views.InputView
            android:id="@+id/inputIntegrationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
...
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="Campaign" />

        <RelativeLayout
            android:id="@+id/rvCampaignChooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/et_only"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/tvSelectedCampaign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:text="Select a Campaign"
                android:textColor="#e6e6e6"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
...
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="Header Text" />

        <com.ambassador.app.views.InputView
            android:id="@+id/inputHeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
...
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="Header Color" />

        <com.ambassador.app.views.ColorInputView
            android:id="@+id/civHeader"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp" />

        <com.ambassador.app.views.ListHeadingView
            android:id="@+id/lhvTextField1"
...
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="Text" />

        <com.ambassador.app.views.InputView
            android:id="@+id/inputTextField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
...
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="Text Color" />

        <com.ambassador.app.views.ColorInputView
            android:id="@+id/civTextField1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp" />

        <com.ambassador.app.views.ListHeadingView
            android:id="@+id/lhvTextField2"
...
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="Text" />

        <com.ambassador.app.views.InputView
            android:id="@+id/inputTextField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
...
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="Text Color" />

        <com.ambassador.app.views.ColorInputView
            android:id="@+id/civTextField2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp" />

        <com.ambassador.app.views.ListHeadingView
            android:layout_width="match_parent"
...
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            demo:text="Social Channels" />

        <com.mobeta.android.dslv.DragSortListView xmlns:dslv="http://schemas.android.com/apk/res-auto"
            android:id="@+id/lvChannels"
            android:layout_width="match_parent"
            android:layout_height="375dp"
            dslv:drag_handle_id="@+id/ivDrag"
            dslv:float_background_color="@android:color/background_light" />

        <com.ambassador.app.views.ListHeadingView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            demo:text="Buttons" />
...
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="Button Color" />

        <com.ambassador.app.views.ColorInputView
            android:id="@+id/civButtons"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="15dp" />

    </LinearLayout>
...
