<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tvChannelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/swChannel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/ivDrag"
        android:checked="true"
        android:switchMinWidth="50dp" />

    <ImageView
        android:id="@+id/ivDrag"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:padding="16dp"
        android:src="@drawable/ic_list" />

</RelativeLayout>