<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:orderInCategory="200"
        android:title="Search"
        app:showAsAction="always" />

</menu>